[bug/frontend] fix courses overflow

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ main {
 .courses-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .course-card {
